<resources>
    <string name="app_name">Suivi-Eleve</string>
    <string name="buttonEnseignant">Enseignant</string>
    <string name="buttonParent">Parent</string>
    <string name="title_activity_parent_acceuil">Suivie-Elève</string>
    <string name="title_activites">Activité</string>
    <string name="title_publier">Publier</string>
    <string name="title_des">Description</string>
    <string name="title_detaille">Details de l évennement</string>

    <string name="title_observations">Observations</string>
    <string name="title_evenements">Evenements</string>
    <string name="title_evenements_scolaire"> Evenements Scolaire</string>
    <string name="title_chat">Chat </string>
    <string name="title_photos">Photos</string>
    <string name="titleActiviteAFaire">Activité à Faire</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">drawerOpen</string>
    <string name="drawer_close">drawerClose</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_string"><u>Tableau de bord</u></string>
    <string name="libele_activite">Libellé</string>

    <string name="type_activites">Type</string>
    <string name="date_limite">Date limite</string>
    <string name="title_creer_une_activite">Créer une activité</string>
    <string name="ajouter_image">Ajouter une image</string>
    <string name="title_hint_libelle_activite">Libellé de l\'activité</string>
    <string name="title_hint_type_ajout_activites">Type de l\'activite</string>
    <string name="title_valider_creer_activite">Valider</string>
    <string name="title_date_ajout_activite">Donner la date limite</string>
    <string name="description_addImageButton">boutton pour ajouter une image</string>
    <string name="Description_imageadded">Affichage image choisie</string>
    <string name="Libellé_content">Libellé content</string>
    <string name="Desc_Image_activity">Image activity</string>
    <string name="Type_content">Type content</string>
    <string name="Date_content">Date content</string>


    <string name="title_creer_un_evenement">Créer un evenement</string>
    <string name="date_limite_evenement">Date limite_ev</string>
    <string name="title_hint_type_ajout_evenement">Type de l\'evenement</string>
    <string name="title_hint_type_ajout_libele">libele</string>
    <string name="title_hint_type_ajout_description">description</string>
    <string name="title_hint_type_ajout_heure">heure</string>
    <string name="title_hint_type_ajout_lieu">lieu</string>
    <string name="title_hint_type_ajout_cotisation">cotisation</string>

    <string name="libele_evenement">Libellé</string>
    <string name="nom_evenement">nom</string>
    <string name="date_limite_eve">Date limite</string>
    <string name="description_evenement">description</string>
    <string name="heure_evenenemnt">heure</string>
    <string name="lieu_evevenement">lieu</string>
    <string name="cotisation_evenement">cotisation</string>
    <string name="type_evenement">type</string>


    <string name="Type_content_ev">Type-ev content</string>
    <string name="Date_content_ev">Date_ev content</string>

    <string name="nom_content_ev">nom content </string>

    <string name="description_content_ev">description content</string>
    <string name="heure_content_ev">heure content</string>
    <string name="lieu_content_ev">lieu content</string>
    <string name="cotisation_content_ev">cotisation content</string>


    <string name="title_faire_lappel">RAPPEL</string>
    <string name="Eleve">eleve</string>
    <string name="eleve">Elève</string>
    <string name="Type">Type</string>
    <string name="type">type</string>
    <string name="note">Note</string>
    <string name="Note">Note</string>
    <string name="envoyer">envoyer</string>
    <string name="Tableau_de_bord">Tableau de bord</string>
    <string name="Ajouter">Ajouter</string>
    <string name="Obeservation_buttionenvoyer">Envoyer</string>
    <string name="title_Rappel">Faire l\'appel</string>
    <string name="title_Activites">Activités</string>
    <string name="title_mot_de_passe_oublie">Mot de passe oublé ?</string>
    <string name="title_username">Nom d\'utilisateur</string>
    <string name="title_password">Mot de passe</string>
    <string name="title_connexion">Connexion</string>
    <string name="title_je_suis">Etes-vous un ?</string>
    <string name="title_eleve_present">Présent</string>
    <string name="title_eleve_absent">Absent</string>

    <string name="Title_Nouvelle_observaion">Nouvelle observaion</string>
    <string name="title_NOte_Observation">Note</string>
    <string name="Eeve_observation">Elève   </string>
    <string name="choisir_eleve">Choisir</string>

    <string name="Deconnexion">Deconnexion</string>


    <string name="nom_profil">Nom</string>
    <string name="prenom_profil">prenom</string>
    <string name="adresse_profil">Adresse</string>
    <string name="tel_profil">Telephone</string>
    <string name="email_profil">Email</string>
    <string name="mdp_profil">mdp</string>

    <string name="conten_nom_profil">conten_nom</string>
    <string name="conten_prenom_profil">conten_prenom</string>
    <string name="conten_adresse_profil">conten_adresse</string>
    <string name="conten_tel_profil">conten_tel</string>
    <string name="conten_email_profil">conten_email</string>
    <string name="conten_mdp_profil">conten_mdp</string>

</resources>
