<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_activites"
        android:icon="@drawable/ic_activites"
        android:title="@string/title_activites" />

    <item
        android:id="@+id/navigation_observations"
        android:icon="@drawable/ic_observations"
        android:title="@string/title_observations" />

    <item
        android:id="@+id/navigation_evennements"
        android:icon="@drawable/ic_event"
        android:title="@string/title_evenements" />
    <item
    android:id="@+id/navigation_Photos"
    android:icon="@drawable/ic_photos"
    android:title="@string/title_photos" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />



</menu>
