<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="402dp"
        android:layout_height="362dp"
        android:background="@drawable/bordure"
        android:padding="16dp">

        <TextView
            android:id="@+id/Nom_eleve"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageActivite"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:text="@string/libele_evenement"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/typeobservation"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Nom_eleve"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/type_evenement"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/noteObservation"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typeobservation"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="43dp"
            android:text="@string/description_evenement"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateObervation"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noteObservation"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="43dp"
            android:text="@string/heure_evenenemnt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateObservation"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateObervation"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="43dp"
            android:text="@string/date_limite_eve"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lieuevenenent"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateObservation"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="43dp"
            android:text="@string/lieu_evevenement"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cotisationevenenent"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lieuevenenent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-24dp"
            android:text="@string/cotisation_evenement"
            android:textSize="18sp" />





        <TextView
            android:id="@+id/nomcontent_ev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageActivite"
            android:layout_marginStart="67dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="342dp"
            android:layout_toEndOf="@+id/Nom_eleve"
            android:text="@string/nom_content_ev"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/typecontent_ev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Nom_eleve"
            android:layout_marginStart="67dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="342dp"
            android:layout_toEndOf="@+id/Nom_eleve"
            android:text="@string/Type_content_ev"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descriptioncontent_ev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typeobservation"
            android:layout_marginStart="67dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="342dp"
            android:layout_toEndOf="@+id/typeobservation"
            android:text="@string/description_content_ev"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/heurecontent_ev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noteObservation"
            android:layout_marginStart="130dp"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="342dp"
            android:text="@string/heure_content_ev"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/datecontent_ev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateObervation"
            android:layout_marginStart="130dp"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="342dp"
            android:text="@string/Date_content_ev"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lieucontent_ev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateObservation"
            android:layout_marginStart="130dp"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="342dp"
            android:text="@string/lieu_content_ev"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cotisationcontent_ev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lieuevenenent"
            android:layout_marginStart="130dp"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="342dp"
            android:text="@string/cotisation_content_ev"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>