<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilParent.ProfilParentActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="157dp"

        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/profile_parent" />

    <androidx.cardview.widget.CardView


        android:id="@+id/relativeLayout"
        android:layout_width="369dp"
        android:layout_height="360dp"
        android:layout_marginTop="210dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/bordure"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">


        <TextView
            android:id="@+id/nom_profile"
            android:layout_width="60dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/nom_profil"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/adresse_profile"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nom_profile_ens"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="115dp"
            android:layout_marginBottom="43dp"
            android:text="@string/adresse_profil"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/telephone_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adresse_profile_ens"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="43dp"
            android:text="@string/tel_profil"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/email_profile"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/telephone_profile_ens"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="220dp"
            android:layout_marginBottom="43dp"
            android:text="@string/email_profil"
            android:textSize="24sp" />




        <TextView
            android:id="@+id/nomcontent_ens"
            android:layout_width="186dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="150dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="34dp"
            android:layout_toEndOf="@+id/nom_profile_ens"
            android:text="@string/nom_content_ev"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/adresse_content_ens"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nom_profile_ens"
            android:layout_marginStart="150dp"
            android:layout_marginTop="115dp"
            android:layout_marginBottom="34dp"
            android:layout_toEndOf="@+id/nom_profile_ens"
            android:text="@string/conten_adresse_profil"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tel_content_ens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adresse_profile_ens"
            android:layout_marginStart="150dp"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="34dp"
            android:text="@string/conten_tel_profil"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/email_content_ens"
            android:layout_width="195dp"
            android:layout_height="60dp"
            android:layout_below="@+id/telephone_profile_ens"
            android:layout_marginStart="150dp"
            android:layout_marginTop="225dp"
            android:layout_marginBottom="39dp"
            android:text="@string/conten_email_profil"
            android:textSize="18sp" />


    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/boutonprofil"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginStart="89dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/roud_background"
        android:gravity="center"
        android:text="@string/Deconnexion"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0" />


</androidx.cardview.widget.CardView>